# qwackling

./: .gitignore  LICENSE  README.md  pyproject.toml  setup.py
duckling-wrapper/: README.md
duckling-wrapper/docs/: Duckling Research Findings.md  Wrapper Usage.md  wrapper_usage.md
duckling-wrapper/scripts/: manage_wrapper.sh
duckling-wrapper/src/: client.py
duckling-wrapper/src/duckling_wrapper/: __init__.py  client.py
duckling-wrapper/tests/: conftest.py  test_wrapper.py
src/duckling-wrapper/: README.md
src/duckling-wrapper/docs/: Duckling Research Findings.md
src/duckling-wrapper/scripts/: manage_wrapper.sh
src/duckling-wrapper/src/duckling_wrapper/: __init__.py  client.py
src/duckling-wrapper/tests/: test_wrapper.py
