[build-system]
requires = ["setuptools>=59.6", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "qwackling"
version = "0.1.3"
description = "Python wrapper around Duckling's HTTP API with optional local server management."
readme = "duckling-wrapper/docs/wrapper_usage.md"
requires-python = ">=3.10,<4.0"
license = "MIT"
authors = [
    {name = "Aaditya Acharya"},
]
keywords = ["date-parser", "nlp", "rest-client", "shawking"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "requests>=2.31.0",
]

[project.urls]
Homepage = "https://github.com/aadityaacharyaa/qwackling"
Repository = "https://github.com/aadityaacharyaa/qwackling"
Documentation = "https://github.com/aadityaacharyaa/qwackling/blob/main/duckling-wrapper/docs/wrapper_usage.md"

[project.optional-dependencies]
dev = [
    "build>=1.2.2",
    "pytest>=8.0.0",
    "setuptools>=59.6",
    "twine>=5.1.1",
    "wheel",
]

[tool.setuptools]
package-dir = {"qwackling" = "duckling-wrapper/src"}
packages = ["qwackling"]

[tool.pytest.ini_options]
testpaths = ["duckling-wrapper/tests"]
